--- a/EFAudit/EFAudit/EFAudit.csproj
+++ b/EFAudit/EFAudit/EFAudit.csproj
@@ -67,6 +67,10 @@
     <Compile Include="Migrations\201902110516160_AddAuditObjects.Designer.cs">
       <DependentUpon>201902110516160_AddAuditObjects.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902140945527_AddPropertiesToProduct.cs" />
+    <Compile Include="Migrations\201902140945527_AddPropertiesToProduct.Designer.cs">
+      <DependentUpon>201902140945527_AddPropertiesToProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
@@ -82,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902110516160_AddAuditObjects.resx">
       <DependentUpon>201902110516160_AddAuditObjects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902140945527_AddPropertiesToProduct.resx">
+      <DependentUpon>201902140945527_AddPropertiesToProduct.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
